--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ repositories {
 
 dependencies {
 
+    //google login
+    compile('org.springframework.boot:spring-boot-starter-oauth2-client')
+
     //mustache
     compile('org.springframework.boot:spring-boot-starter-mustache')
 
